--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
           <a href="https://www.buymeacoffee.com/jimmiemunyi" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/default-blue.png" alt="Buy Me A Coffee" width="200px"></a>
         </p>
         <p>
-          Built using <a href="https://github.com/fastai/fastpages"><img src="{{ 'images/logo.png' | relative_url }}">fastpages</a>
+          Built using <a href="https://github.com/fastai/fastpages"><img src="{{ 'images/fastai.png' | relative_url }}">fastpages</a>
        </p>
       </div>
     </div>
